#122 add syncedAt property to CalDavAuth
Changelog: feat
